<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/settings_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|top"
        android:paddingTop="20dp"
        android:text="@string/GameTitle"
        android:layout_marginBottom="60dp"
        android:textSize="35sp" >
    </TextView>

    <Button
        android:id="@+id/newgame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center|center_vertical"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="40dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/New_Game"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/pr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom|center"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:text="@string/Best_Time"
        android:textSize="20sp" />

    <Button
        android:id="@+id/clearbest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="bottom|center|center_vertical"
        android:layout_marginTop="40dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/Clear_Record"
        android:textSize="20sp" />

</LinearLayout>